--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Hola Mundo , soy Ahiram, vivo en el Estado de México</h1>
+    <h2>Segundo Commit</h2>
   </body>
 </html>
