--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Hola Mundo , soy Ahiram, vivo en el Estado de México</h1>
     <h2>Segundo Commit</h2>
+    <h3>Tercer Commit</h3>
   </body>
 </html>
